Fixed misaligned titles in /blogs

--- a/css/override.css
+++ b/css/override.css
@@ -77,6 +77,10 @@ p {
   right: 0%;
 }
 
+.post-title {
+	padding-top: 0px;
+}
+
 .projtitle {
 	font-size: 20px;
 	font-weight: bold;
